--- a/about.html
+++ b/about.html
@@ -1,9 +1,7 @@
 ---
 layout: default
-title: Twitter Open Source
-description: Twitter Open Source Website
-keywords: twitter, open, source, open source, finatra, finagle, scala
-url: https://opensource.twitter.com
+title: Raymond Chou's Design Portfolio
+description: Raymond Chou's Design Portfolio Website
 custom_css: about.css
 custom_js: about.js
 ---
