--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Twitter Open Source
-description: Twitter Open Source Website
+title: Raymond Chou's Design Portfolio
+description: Raymond Chou's Design Portfolio Website
 keywords: twitter, open, source, open source, finatra, finagle, scala
 url: https://opensource.twitter.com
 custom_css: index.css
@@ -14,9 +14,9 @@ custom_js: index.js
     <div class="Grid container">
         <div id="header-text" class="Grid-cell u-size7of8">
             <h1 class="subheading">
-                <a href="https://twitter.com/TwitterOSS" target="_blank">@TwitterOSS</a>
+                Raymond Chou
             </h1>
-            <h1 class="large-title">Open Source is Happening</h1>
+            <h1 class="large-title">Design Portfolio</h1>
         </div>
     </div>
 </div>
