--- a/memberships.html
+++ b/memberships.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Twitter Open Source
-description: Twitter Open Source Website
+title: Raymond Chou's Design Portfolio
+description: Raymond Chou's Design Portfolio Website
 keywords: twitter, open, source, open source, finatra, finagle, scala
 url: https://opensource.twitter.com
 custom_css: memberships.css
