finished front page

--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@ custom_js: index.js
 <div class="section grey">
     <div class="Grid container">
         <div id="philosophy-text" class="Grid-cell u-size4of6 u-before1of6 u-after1of6">
-            <h1 class="small-title center-text mega-margin">#OurPhilosophy</h1>
-            <p class="center-text mega-margin">For anything to grow, you need three things:</p>
+            <h1 class="small-title center-text mega-margin">Purpose and Motivation</h1>
+            <p class="center-text mega-margin">This portfolio is to showcase my knowledge, experiences, and achievements in engineering and engineering design in the last 5 years</p>
         </div>
     </div>
     <div class="Grid small-container">
         <div class="Grid-cell u-size1of3 emoji-card">
-            <img src="assets/fire.png" alt="Fire emoji" class="emoji-img center-margin large-margin">
-            <h1 class="center-text medium-margin">Heat</h1>
-            <p class="center-text">Heat means work.<br/><br/>Upstream contributions, bug fixes, designs, docs--the rigorous work that drives the community.</p>
+            <img src="assets/scholarship.png" alt="Fire emoji" class="emoji-img center-margin large-margin">
+            <a class="nav-link-body" href="{{ site.baseurl }}/coursework"><h1 class="center-text medium-margin">Coursework</h1></a>
+            <p class="center-text">Developing My Skills<br/><br/>Detailing the engineering knowledge I have gained over the past 5 years</p>
         </div>
 
         <div class="Grid-cell u-size1of3 emoji-card">
-            <img src="assets/sun.png" alt="Sun emoji" class="emoji-img center-margin large-margin">
-            <h1 class="center-text medium-margin">Light</h1>
-            <p class="center-text">Light means visibility. <br/><br/>For the projects, contributions, opportunities, challenges, and people that impact the community.</p>
+            <img src="assets/hackathon.png" alt="Sun emoji" class="emoji-img center-margin large-margin">
+            <a class="nav-link-body" href="{{ site.baseurl }}/extracurricular"><h1 class="center-text medium-margin">Extracurricular</h1></a>
+            <p class="center-text">Applying My Skills <br/><br/>Application of my engineering knowledge to real-life problems</p>
         </div>
 
         <div class="Grid-cell u-size1of3 emoji-card">
-            <img src="assets/pride.png" alt="Pride heart emoji" class="emoji-img center-margin large-margin">
-            <h1 class="center-text medium-margin">Love</h1>
-            <p class="center-text">Love means culture and support.<br/><br/>Why we care. How we work. Actions that grow the community.</p>
+            <img src="assets/technical-support.png" alt="Pride heart emoji" class="emoji-img center-margin large-margin">
+            <a class="nav-link-body" href="{{ site.baseurl }}/capstone"><h1 class="center-text medium-margin">Capstone</h1></a>
+            <p class="center-text">Engineering Design in Practice<br/><br/>Showcasing my knowledge of engineering design in a project with eBay Canada</p>
         </div>
 
     </div>
@@ -54,27 +54,16 @@ custom_js: index.js
 <div class="section explore-projects">
     <div class="Grid container">
         <div class="Grid-cell left-text u-size5of12 u-after1of12">
-            <h1 class="small-title mega-margin">Explore Projects</h1>
-            <p class="mega-margin">Twitter has been built on open source since the beginning. Openness is part of our DNA. The projects you see here were born at Twitter, and patches are always welcome!</p>
-            <button onclick="location.href='projects.html'" type="button" class="Button Button--large">View All Projects</button>
+            <h1 class="small-title mega-margin">Explore My Portfolio</h1>
+            <p class="mega-margin">An overview of all my engineering design work over the past 5 years demonstrating my knowledge of Data Science, Programming, and Engineering Design</p>
+            <button onclick="location.href='coursework.html'" type="button" class="Button Button--large">View My Portfolio</button>
         </div>
         <div class="Grid-cell explore-projects-blank"></div>
     </div>
 </div>
 
-<!-- Follow Us @TwitterOSS -->
-
-<div class="grey section">
-    <div class="Grid container">
-        <!-- The heading "Follow Us @TwitterOSS" is inserted with Javascript -->
-        <div id="open-source-timeline" class="Grid-cell timeline-cell u-size1of2">
-            <a class="twitter-timeline" data-height="700px" href="https://twitter.com/TwitterOSS?ref_src=twsrc%5Etfw">Tweets by TwitterOSS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-    </div>
-</div>
-
 <!-- Join the Flock -->
-
+<!-- 
 <div class="section">
     <div class="Grid container">
         <div id="career-text" class="Grid-cell left-text u-size5of12 u-after1of12 same-mega-margin">
@@ -86,4 +75,4 @@ custom_js: index.js
             <a class="twitter-timeline" data-height="700px" data-partner="tweetdeck" href="https://twitter.com/TwitterOSS/timelines/1028044487681925121?ref_src=twsrc%5Etfw">#TwitterOSSJobs - Curated tweets by TwitterOSS</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
-</div>
+</div> -->
