--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Design Portfolio</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/fox.ico">
-	<link rel="icon" href="favicon.ico" type="image/fox.ico">
+	<link rel="shortcut icon" href="images/fox.ico">
+	<link rel="icon" href="images/fox.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
