links opens in new tab

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
         <h2 class="heading">Coursework</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – December 2015">
-                <h3><a href="https://drive.google.com/open?id=1NzV2yUpeKfK8AOEwZ0KcaA-GViE1SqTS">Engineering Strategies and Practices I</a></h3>
+                <h3><a href="https://drive.google.com/open?id=1NzV2yUpeKfK8AOEwZ0KcaA-GViE1SqTS" target="_blank">Engineering Strategies and Practices I</a></h3>
                 <h4>APS111</h4>
                 <p>
                     My first experience with engineering design was in the first-year engineering strategies and practices  (ESP) course where we had to design an engineering solution to transport vaccines in an environment that was not hospitable to it. In a group of 5 other engineers, we identified the primary functions, objectives, and constraints of the design problem. Using what we had learned in class, we attempted to generate innovative ideas through the help of structured brainstorming.  After coming up with 5 alternative designs, we selected the most optimal design for the problem by utilizing a weighted decision matrix. From the results we gained, we found that cryo-pack design was the best design due to its ability to meet the functions and constraints, while performing the best on our objectives.  This design that I helped create using the principles of engineering design.                 </p>
             </div>
 
             <div data-date="January 2016 – April 2016">
-                <h3><a href="https://drive.google.com/open?id=1bAXTt9k5IEcJRSDr5mTk-QexoH0fFxwz">Engineering Strategies and Practices II</a></h3>
+                <h3><a href="https://drive.google.com/open?id=1bAXTt9k5IEcJRSDr5mTk-QexoH0fFxwz" target="_blank">Engineering Strategies and Practices II</a></h3>
                 <h4>APS112</h4>
                 <p>
                     In ESPII, I got a chance to apply my learning in solving a problem for a client. Our design was tasked to design a way to teach high school students about engineering design through a fun activity. Again, we leveraged our learnings from class and identified the problem functions, objectives, and constraints to scope the problem. Additionally, we used a pairwise comparison chart to determine the best design out of the dozens of designs we brainstormed as shown in Figure 3. The design we came up with was called the “Angry Birds™ Catapult Design” (ABCD). ABCD was a fun design where participants were challenged to create catapults (Angry Bird™ stations) and use measurements/calculations to aim and fire a projectile at a designated target. It incorporated topics from five courses: Dynamics, Mechanics, Applied Science and Materials; and Engineering Strategies and Practice I & II.                </p>
@@ -106,14 +106,14 @@
             </div>
 
             <div data-date="January 2017 – April 2017">
-                <h3><a href="https://drive.google.com/open?id=1HHlNklfMw03lY-d7y9FZKWA4lK-UnSHe">Human-Centered Design</a></h3>
+                <h3><a href="https://drive.google.com/open?id=1HHlNklfMw03lY-d7y9FZKWA4lK-UnSHe" target="_blank">Human-Centered Design</a></h3>
                 <h4>MIE240</h4>
                 <p>
                     Another course in my second year that affected my view on engineering design was the human centered design course. This course made me realize the importance of designing for people. I also learned that designing for people required a lot of usability testing and design with a purpose driven by principles that had been researched and tested by researchers in the Human Factors field. I worked on a project to improve the user-interface of the Spotify desktop application. In a tea of 3, we leveraged our course knowledge to reduce the number errors in the task of adding a song into your playlist, while also increasing the learnability of the application by changing button location and feedback.             
                 </p>
             </div>
             <div data-date="January 2018 – April 2018">
-                <h3><a href="https://drive.google.com/open?id=1aAZxi81qaGS-bXRJ6BZcYX0jvg4bBalG">Analytics in Action</a></h3>
+                <h3><a href="https://drive.google.com/open?id=1aAZxi81qaGS-bXRJ6BZcYX0jvg4bBalG" target="_blank">Analytics in Action</a></h3>
                 <h4>MIE465</h4>
                 <p>
                     The course that helped me develop the necessary technical skills to solve the problem provided to us by eBay Canada was Analytics in Action during the second semester of my third year. This course focused on the theory and application of machine learning and data science. A team of 4 industrial engineers, used our learnings to develop a machine learning binary classification model that would predict whether a song would enter the billboard 100 based on its musical characteristics only. The experience working with class imbalance and high-dimensional feature space in this project was essential to our capstone design as they shared many similarities.
@@ -138,7 +138,7 @@
                         <p>
                             Outside of coursework, I worked to solve real world problems such as predicting an “exciting” run so that NBA teams can anticipate potential onslaught before it occurs. A team of 3 industrial engineers including myself, created an ensemble model to predict the occurrence of "exciting" runs during an NBA game. This experience helped me understand how to present technical solutions to a wide audience, which will ultimately serve useful when working with eBay Canada for Capstone. Moreover, this project developed me as an industrial engineering student by improving my data science and statistical analysis skills.
                         </p>
-                        <a href="https://github.com/alychow/nbahackathon2017">View Project</a>
+                        <a href="https://github.com/alychow/nbahackathon2017" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -154,7 +154,7 @@
                         <p>
                             Using my knowledge of machine learning from MIE465 as well as human-centered design from MIE240, I developed a solution that aims to address the lack of support for the visually impaired by harnessing a Microsoft Cognitive API to provide real-time information on facial expressions during a video call. Through this experience, I learned that engineers need to consider a wide variety of different factors such as user environment, usability, functionality when designing a product. 
                         </p>
-                        <a href="https://github.com/raymond3chou/hackCambridge">View Project</a>
+                        <a href="https://github.com/raymond3chou/hackCambridge" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -169,7 +169,7 @@
                         <p>
                             Using my knowledge of machine learning from MIE465 as well as human-centered design from MIE240, I developed a solution that aims to address the lack of support for the visually impaired by harnessing a Microsoft Cognitive API to provide real-time information on facial expressions during a video call. Through this experience, I learned that engineers need to consider a wide variety of different factors such as user environment, usability, functionality when designing a product. 
                         </p>
-                        <a href="https://github.com/raymond3chou/waltzing_roomba">View Project</a>
+                        <a href="https://github.com/raymond3chou/waltzing_roomba" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
