changed extracurricular title link

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Predicting Exciting NBA Runs</h3>
+                        <h3><a href="https://github.com/alychow/nbahackathon2017" target="_blank">Predicting Exciting NBA Runs</a></h3>
                         <h4>NBA Hackthon</h4>
                         <p>
                             Outside of my coursework, I seeked out oppurtunities to solve real world problems. During
@@ -201,7 +201,6 @@
                             working with eBay Canada for Capstone. Moreover, this project developed me as an industrial
                             engineering student by improving my data science and statistical analysis skills.
                         </p>
-                        <a href="https://github.com/alychow/nbahackathon2017" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -213,7 +212,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Reading Video Conferencing Emotion</h3>
+                        <h3><a href="https://github.com/raymond3chou/hackCambridge" target="_blank">Reading Video Conferencing Emotion</a></h3>
                         <h4>Hack Cambridge</h4>
                         <p>
                             Using my knowledge of machine learning from MIE465 as well as human-centered design from
@@ -223,7 +222,6 @@
                             consider a wide variety of different factors such as user environment, usability,
                             functionality when designing a product.
                         </p>
-                        <a href="https://github.com/raymond3chou/hackCambridge" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -234,7 +232,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Dancing Roomba</h3>
+                        <h3><a href="https://github.com/raymond3chou/waltzing_roomba" target="_blank">Dancing Roomba</a></h3>
                         <h4>Hack MIT</h4>
                         <p>
                             In a team of 4, I helped hack a Roomba, an automous vacumm, to play sheet music and dance.
@@ -243,7 +241,6 @@
                             while developing a business case for the solution. This experience would help me in planning
                             how to fully ultilize all my capstone teammate's strength for our project.
                         </p>
-                        <a href="https://github.com/raymond3chou/waltzing_roomba" target="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
