--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Raymond Chou</h1>
-            <h2>Engineering Design Portfolio</h2>
+            <h2>Multi-Disciplinary Capstone Engineering Design Portfolio</h2>
         </div>
         <!-- End #lead-content -->
 
