expanded capstone section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3><a href="https://github.com/alychow/nbahackathon2017" target="_blank">Predicting Exciting NBA Runs</a></h3>
+                        <h3><a href="https://github.com/alychow/nbahackathon2017" target="_blank">Predicting Exciting
+                                NBA Runs</a></h3>
                         <h4>NBA Hackthon</h4>
                         <p>
                             Outside of my coursework, I seeked out oppurtunities to solve real world problems. During
@@ -212,7 +213,8 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3><a href="https://github.com/raymond3chou/hackCambridge" target="_blank">Reading Video Conferencing Emotion</a></h3>
+                        <h3><a href="https://github.com/raymond3chou/hackCambridge" target="_blank">Reading Video
+                                Conferencing Emotion</a></h3>
                         <h4>Hack Cambridge</h4>
                         <p>
                             Using my knowledge of machine learning from MIE465 as well as human-centered design from
@@ -232,7 +234,8 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3><a href="https://github.com/raymond3chou/waltzing_roomba" target="_blank">Dancing Roomba</a></h3>
+                        <h3><a href="https://github.com/raymond3chou/waltzing_roomba" target="_blank">Dancing Roomba</a>
+                        </h3>
                         <h4>Hack MIT</h4>
                         <p>
                             In a team of 4, I helped hack a Roomba, an automous vacumm, to play sheet music and dance.
@@ -317,9 +320,13 @@
                 For my graduate capstone, I had the privilege of working with eBay Canada to look for way to growth
                 their active buyer base. This project was the culmination my 4 prior years of engineering design and
                 study. I served as the primary data scientist and helped analyse data as well as build and test our
-                classification model. My experiences from MIE465 helped me identify and solve the issue of class
+                classification model. I researched and implemented the feature selection framework that we ultimately
+                used to select our features. Moreover, I helped train and tune the gradient boosted model. My
+                experiences from MIE465 helped me identify and solve the issue of class
                 imbalance, while my learnings from the NBA hackathon and PEY at eBay Canada guided me through the dense
-                eBay data warehouse. Moreover, the due diligence I picked up from my time at BMO helped me look for
+                eBay data warehouse. I had to explore the data warehouse and identify features that would be useful. We
+                ended up with roughly 20-30 unique data sets throughout the 8 month project. Moreover, the due diligence
+                I picked up from my time at BMO helped me look for
                 better solutions while constantly iterating our design solution. Finally, the knowledge from ESP I and
                 ESP II helped me
                 identify the functions, objectives, and constraints necessary to scope down the problem. The combination
@@ -352,7 +359,8 @@
                     continuously improve my approach to engineering design as well as expand my knowledge. Moreover, I
                     will take my teammates advice through the TELS survey to identify and work on my weaknesses. I hope
                     that
-                    my experiences at the University of Toronto will serve as constant reminder that, as an engineer, I work
+                    my experiences at the University of Toronto will serve as constant reminder that, as an engineer, I
+                    work
                     to serve other people and society.
                 </p>
             </div>
