justified the capstone section

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <h3>APS490 Multi-Disciplinary Capstone</h3>
             <span class="education-date">Sept 2018 - Apr 2019</span>
             <h4>Improving Buyer Reactivation with Predictive Coupon Targeting</h4>
-            <p>
+            <p align="justify" >
                 For my graduate capstone, I had the privilege of working with eBay Canada to look for way to growth
                 their active buyer base. This project was the culmination my 4 prior years of engineering design and
                 study. I served as the primary data scientist and helped analyse data as well as build and test our
